--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,17 @@
   box-sizing: border-box;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
@@ -83,4 +94,11 @@ input {
   margin-right: 5px;
 
   align-items: center;
+}
+
+.message {
+  display: flex;
+  justify-content: center;
+
+  font-style: italic;
 }
